applications/upsnap/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upsnap
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: upsnap
  template:
    metadata:
      labels:
        app: upsnap
    spec:
      hostNetwork: true
      containers:
        - name: upsnap
          image: ghcr.io/seriousm4x/upsnap:latest@sha256:5640aaef14f6c6ae9a33595e5498fdd017b9c5bc2aa5be052602ede5ea6c8191
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: upsnap-storage
              mountPath: /app/pb_data
      volumes:
        - name: upsnap-storage
          persistentVolumeClaim:
            claimName: upsnap-pvc
