applications/upsnap/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upsnap
spec:
  type: ClusterIP
  selector:
    app: upsnap
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8090
